# bkp

./: .gitignore  .setup.py.kate-swp  README.md  README.rst  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
bkp/: __init__.py  __main__.py  action_backup.py  action_info.py  action_restore.py  config.py  exceptions.py  fsop.py  resources.py  tarop.py  terminal.py  timestamp.py
docs/: demo.cast  demo.yml
tests/: test_backup.py  test_info.py  test_restore.py
